Thu Feb 02 16:40:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* config/Default.in, config/PostSession., config/XKeepsCrashing
	  config/Xsession.in:  Fixed bug #155154, the Alt and Meta
	  keys are swapped on Solaris.  Also fixes the usage of IFS
	  so it works on Solaris.
	* gui/gdmsetup.desktop.in:  Fixed bug 161346.  

Thu Feb 02 15:35:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* daemon/slave.c: Fixed bug 135401.

Thu Feb 02 14:20:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* configure.in, config/gdm.conf.in, daemon/gdm.h: Cleaned up
	  the way the user's default PATH is set and allow it to be
	  configurable.  Also allow default Halt, Reboot, and Suspend
	  commands to be different on Solaris.
	* acconfig.h: Cleanup, added new configure options.
	* gui/greeter/greeter_parser.c, vicious-extensions/glade-helper.c:
	  Use ngettext for translation.
	
Wed Feb 02 11:20:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* Release 2.6.0.7

Tue Jan 28 15:35:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* This patch makes gdm2 build with newer versions of the build
	  tools.  Previously it was requiring automake-1.4, autoconf-1.4,
	  and aclocal-1.4.  Better error checking in the newer version
	  caught the following issues:
	* Makefile.am:  Added distuninstallcheck_listfiles for the
	  files in /var/scrollkeeper, which were causing "makedist"
	  to fail.  Removed intltool-modules/XML/Parser/Style/OrigTree.pm
	  from EXTRA_DIST since that file isn't required by newer 
	  versions of intltool.
	* omf.make, xmldocs.make:  Fixed errors in "makedist".   I found a
	  pointer to the fix here:
    	  mail.gnome.org/archives/desktop-devel-list/2003-December/msg00587.html
	* gui/Makefile.am, gui/greeter/themes/circles/Makefile.am,
	  gui/modules/Makefile.am, gui/greeter/themes/happygnome/Makefile.am,
	  config/Makefile.am, gui/greeter/themes/happygnome-list/Makefile.am:
	  Added clean-local and uninstall-hook to fix errors in "makedist".