@@ -1,3 +1,7 @@
+Thu Feb 07 21:10:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>
+
+	* daemon/verify-pam.c: Support devperm for automatic login.
+
 Thu Feb 02 16:40:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>
 
 	* config/Default.in, config/PostSession., config/XKeepsCrashing
